--- a/css/transaction.module.css
+++ b/css/transaction.module.css
@@ -1,45 +1,79 @@
-.transaction_container {
-  background: rgb(205, 244, 207);
-  background: linear-gradient(
-    180deg,
-    rgba(205, 244, 207, 1) 29%,
-    rgba(147, 226, 151, 1) 79%,
-    rgba(171, 246, 174, 1) 100%
-  );
-  height: 400px;
-  width: 20%;
-  margin: 100px auto;
-  padding: 40px 100px 100px 100px;
-  border-radius: 20px;
-  background-color: #fff;
-  box-shadow: rgb(204, 232, 221) 3px 3px 6px 0px inset,
-    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
-}
-
-.transaction_container h1 {
-  display: inline-block;
-  margin-bottom: 30px;
-  font-family: "Montserrat", sans-serif;
-  letter-spacing: 2px;
-  color: #00ab66;
-}
-
-.transaction_container table th {
-  color: white;
-  background: #04aa6d;
-}
-.transaction_container table th,
-td {
+.body {
+  background-color: #BBBBBF;
   padding: 10px;
-}
-/* td config*/
-.transaction_container td {
-  background-color: #fff;
-}
-.transaction_container tr:nth-child(even) {
-  background-color: #f2f2f2;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-.transaction_container tr:hover {
-  background-color: #ddd;
+.body .Header {
+  text-align: center;
 }
+
+.body .tool_bar .search .submit_button {
+  padding: 6px 10px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+  float: center;
+}
+
+.body .tool_bar .search .submit_button:hover {
+  background: #ccc;
+}
+
+.body .tool_bar .sort .submit_button {
+  padding: 6px 10px;
+  background: #ddd;
+  border: none;
+  cursor: pointer;
+}
+
+.body .tool_bar .sort .submit_button:hover {
+  background: #ccc;
+}
+
+.body .tool_bar .search_bar {
+  padding: 6px;
+  font-size: 17px;
+  border: none;
+  float: center;
+}
+
+.body .tool_bar .sort .get_sort {
+  padding: 6px 10px;
+  margin-right: 16px;
+}
+
+.body .tool_bar {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+
+.body .market_section .onetransaction {
+  display: grid;
+  grid-template-columns: 15% 15% 15% 15% 15% 15% 15%;
+  padding: 0px 5px 10px 5px;
+  border-top: 1px rgb(70, 69, 69) solid;
+  width: 100%;
+}
+
+.body .market_section .section {
+  padding: 10px 0px 10px 0px;
+  text-align: center;
+}
+
+.body .market_section .link_to_prod {
+  text-decoration: none;
+  color: black;
+}
+
+.body .market_section .product {
+  background: white;
+  margin-top: 5px;
+}
+
+.body .market_section .section:hover {}
