add header link

--- a/css/bid.module.css
+++ b/css/bid.module.css
@@ -74,7 +74,7 @@
         background: #453534;
     }
     
-    .header {
+    .header1 {
         background: radial-gradient(#fff, #ffd6d6);
     }
     
